<resources>
    <string name="app_name">ROAD PRINTER</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="speed_area">Speed area</string>
    <string name="ArrowsButtonText">ARROWS</string>
    <string name="SpeedLimitButtonText">SPEED LIMITS</string>
    <string name="othersButtonText">OTHERS</string>
    <string name="CityButtonText">Under 50km/h</string>
    <string name="CountyButtonText">Over 50km/h</string>
    <string name="FirmLogo" translatable="false">Insinooritoimisto Angelva Oy</string>
    <string name="StartButtonText">START</string>
    <string name="ImportButtonText">IMPORT</string>
    <string name="GuideButtonText">GUIDE</string>
    <string name="GuideText">Instructions</string>
    <string name="chooseSpeedRangeText">Choose speed range</string>

    <!-- Titles of fragments -->
    <string name="titleSignOptions">Signs</string>
    <string name="titleGuide">Guide</string>
    <string name="titleImport">Import</string>
    <string name="titlePrinting">Printing</string>
    <string name="titleSignType">Sign type</string>
    <string name="titleSpeedArea">Speed area</string>
    <string name="titleStart">Start</string>


    <string name="yMovementInputListItemsSteps">Y movement, use cm</string>
    <string name="xMovementInputListItemSteps">X movement, use cm</string>

    <string-array name="type_options_array">
        <item>Arrows</item>
        <item>Others</item>
        <item>Speed limits</item>
    </string-array>

    <string name="languageOptionText">Language</string>
    <string name="nightDayOptionText">night/day option</string>
    <string name="stop_printing_text">Stop Printing</string>
    <string name="start_printing">Start Printing</string>
    <string name="sign_name">Sign name</string>
    <string name="info_measurements">Info, measurements...</string>
    <string name="newStepButtonString">+</string>
    <string name="over_50km_hCheckBoxString">Under 50km/h</string>
    <string name="save_steps">Save steps</string>
    <string name="cancel">Cancel</string>
    <string name="get_image">Get image</string>
    <string name="create">Create</string>
    <string name="importGuide">Import</string>
    <string name="userPreferencesGuide">User preferences</string>
    <string name="printingGuide">Printing</string>
    <string name="signImagePrinting">Signs image</string>
    <string name="listItemsStepsVertical">Vertical</string>
    <string name="listItemsStepsHorizontal">Horizontal</string>
    <string name="listItemsStepsArc">Arc</string>
    <string name="listItemsStepsDiagonal">Diagonal</string>
    <string name="radio_noPaintRadioButton">No painting</string>
    <string name="radio_5WidePaintRadioButton">5 cm wide painting</string>
    <string name="_10_cm_wide_paintingRadioButton">10 cm wide painting</string>
    <string name="_50_cm_wide_paintingRadioButton">50 cm wide painting</string>

    <!-- ohjeet -->
    <string name="userPreferenceTextGuide">Voit vaihtaa näkymän yö tai päivä modeen oheisen kuvakkeen kautta</string>
    <string name="userPreferenceTextGuide2">Voit vaihtaa sovelluksen kieltä oheisen kuvakkeen kautta</string>
    <string name="PrintingTextGuide">Tulostamisen aloittaminen</string>
    <string name="PrintingInstructions">\n1. Valitse start \n\n\n\n\n2. Valitse nopeusalue \n\n\n\n\n3. valitse haluttu merkki \n\n\n\n\n\n4. Voit valita galleriasta haluamasi merkin \n\n\n\n\n5. Tämän jälkeen voit aloittaa tulostuksen ja halutessasi keskkeyttää</string>
    <string name="importTextInstructions">2. Ladataksesi kuvan näpäytä Get image painiketta. Tämän jälkeen pääset valitsemaan tabletin galleriasta kuva, jonka jälkeen voit syötää haluamasi arvot ja muut ominaisuudet. Lopuksi paina Create.</string>
    <string name="importTextInstructions2">Seuraavaksi syötä haluamasi stepit eli liikeradat X ja Y sarakkeisiin. Tämän jälkeen valitse vielä maalin leveys. Plussasta saat lisää steppejä ohjelmoitua. Tämän jälkeen voit tallentaa muutokset SAVE STEP painikkeen kautta. Nyt luomasi merkki löytyy tulostusvalikosta.</string>
    <string name="importTextGuide">1. Valitse import</string>
    <string name="importTextTitle">Kuvan lisääminen</string>
    <string name="instructionsTitle">Instructions</string>

</resources>
