<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.ImportFragment">

    <!-- ***********        viewModel data         *********** -->

    <data>
        <variable
            name="viewModel"
            type="com.example.android.navigation.screens.imports.ImportViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/importConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ***********        Sign name         *********** -->

        <EditText
            android:id="@+id/newSignNameInputImport"
            android:text="@={viewModel.signName}"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/sign_name"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/newSignImageButtonImport"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ***********        Sign info         *********** -->

        <EditText
            android:id="@+id/newSignInfoInputImport"
            android:text="@={viewModel.signInfo}"
            android:hint="@string/info_measurements"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintStart_toEndOf="@+id/newSignImageButtonImport"
            app:layout_constraintTop_toBottomOf="@+id/newSignNameInputImport" />

        <!-- ***********        Import image button         *********** -->

        <Button
            android:id="@+id/newSignImageButtonImport"
            android:text="@string/get_image"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ***********        Create sign         *********** -->

        <Button
            android:id="@+id/createSignButtonImport"
            android:text="@string/create"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ***********        Add new step button         *********** -->

        <Button
            android:id="@+id/newStepButtonImport"
            android:text="@string/newStepButtonString"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="125dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toTopOf="@+id/saveStepsButtonImport"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- ***********        Steps in recyclerview         *********** -->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewImport"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_gravity="start"
            android:layout_marginTop="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ***********        Save Steps button         *********** -->

        <Button
            android:id="@+id/saveStepsButtonImport"
            android:text="@string/save_steps"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- ***********        Delete created sign and steps         *********** -->

        <Button
            android:id="@+id/cancelButtonImport"
            android:text="@string/cancel"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- ***********        Speed area checkbox         *********** -->

        <CheckBox
            android:id="@+id/speedAreaCheckboxImport"
            android:text="@string/over_50km_hCheckBoxString"
            android:checked="@={viewModel.speedArea}"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="340dp"
            android:scaleX="1.50"
            android:scaleY="1.50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ***********        Type spinner         *********** -->

        <Spinner
            android:id="@+id/typeInputImport"
            tools:setOnItemSelectedListener="@{viewModel.clicksListener}"
            android:inputType="textPersonName"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            app:layout_constraintStart_toEndOf="@+id/newSignNameInputImport"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
