<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.SignTypeFragment">

    <!-- ***********        viewModel data         *********** -->

    <data>
        <variable
            name="viewModel"
            type="com.example.android.navigation.screens.sign_type.SignTypeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signTypeConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- ***********        Image         *********** -->

        <ImageView
            android:id="@+id/titleImageSpeedArea"
            app:srcCompat="@drawable/bg_logo"
            android:layout_width="0dp"
            android:layout_height="172dp"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:contentDescription="@string/FirmLogo"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/arrowsButtonSignType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ***********        Arrows button         *********** -->

        <Button
            android:id="@+id/arrowsButtonSignType"
            android:text="@string/ArrowsButtonText"
            android:onClick="@{() -> viewModel.optionArrowsChosen()}"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_marginTop="80dp"
            app:layout_constraintBottom_toTopOf="@+id/speedLimitButtonSignType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleImageSpeedArea" />

        <!-- ***********        Speed limit button         *********** -->

        <Button
            android:id="@+id/speedLimitButtonSignType"
            android:text="@string/SpeedLimitButtonText"
            android:onClick="@{() -> viewModel.optionSpeedLimitsChosen()}"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/othersButtonSignType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrowsButtonSignType" />

        <!-- ***********        Others button         *********** -->

        <Button
            android:id="@+id/othersButtonSignType"
            android:text="@string/othersButtonText"
            android:onClick="@{() -> viewModel.optionOthersChosen()}"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speedLimitButtonSignType" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
