<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.screens.speed_area.SpeedAreaFragment">

    <data>
        <variable
            name="VM"
            type="com.example.android.navigation.screens.speed_area.SpeedAreaViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/speedAreaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_backround">

            <ImageView
                android:id="@+id/questionImage"
                android:layout_width="0dp"
                android:layout_height="@dimen/image_header_height"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/questionText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/android_category_simple" />

            <TextView
                android:id="@+id/questionText"
                style="@style/textstyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/question_horizontal_margin"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/question_horizontal_margin"
                android:fontFamily="sans-serif"
                android:text="@string/speed_area"
                android:textSize="@dimen/question_text_size"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionImage"
                tools:text="@string/chooseSpeedRangeText" />


            <Button
                android:id="@+id/cityButton"
                style="@style/Buttons"
                android:layout_marginStart="@dimen/question_horizontal_margin"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="@dimen/question_horizontal_margin"
                android:background="@drawable/round_button"
                android:onClick="@{() -> VM.cityChosen()}"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:text="@string/CityButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/questionText" />

            <Button
                android:id="@+id/outsideCityButton"
                style="@style/Buttons"
                android:layout_marginTop="32dp"
                android:background="@drawable/round_button"
                android:onClick="@{() -> VM.countyChosen()}"
                android:paddingStart="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:text="@string/CountyButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>