<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.screens.guide.GuideFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <!-- ***********        Title        *********** -->

                <TextView
                    android:id="@+id/instructionsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="405dp"
                    android:layout_marginTop="32dp"
                    android:text="Ohjeet"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:fontFamily="@font/montserrat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.065"
                    app:layout_constraintStart_toEndOf="@+id/importButtonGuide"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- ***********        Buttons         *********** -->

                <Button
                    android:id="@+id/printingButtonGuide"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/printingGuide"
                    app:elevation="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userPreferenceButtonGuide" />

                <Button
                    android:id="@+id/importButtonGuide"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/importGuide"
                    app:layout_constraintBottom_toTopOf="@+id/userPreferenceButtonGuide"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/userPreferenceButtonGuide"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/userPreferencesGuide"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/importButtonGuide" />

                <!-- ***********        Import CardView         *********** -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/importInstructions"
                    android:layout_width="900dp"
                    android:layout_height="500dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="32dp"
                    android:visibility="invisible"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/importButtonGuide"
                    app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/importTextGuide"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="50dp"
                                    android:layout_marginEnd="477dp"
                                    android:text="TextView"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!-- ***********        Printing CardView         *********** -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/printingInstructions"
                    android:layout_width="900dp"
                    android:layout_height="500dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="32dp"
                    android:visibility="visible"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/importButtonGuide"
                    app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                                <ScrollView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                        <LinearLayout
                                            android:layout_width="900dp"
                                            android:layout_height="wrap_content"
                                            android:orientation="horizontal">

                                                <LinearLayout
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
                                                    android:layout_weight="1"
                                                    android:orientation="vertical"
                                                    android:layout_gravity="left">

                                                        <TextView
                                                            android:id="@+id/printInstructions"
                                                            android:layout_width="400dp"
                                                            android:layout_height="wrap_content"
                                                            android:layout_marginStart="50dp"
                                                            android:layout_marginTop="33dp"
                                                            android:layout_weight="1"
                                                            android:text="@string/PrintingInstructions"
                                                            android:textStyle="normal" />

                                                        <ImageView
                                                            android:id="@+id/printStart"
                                                            android:layout_width="300dp"
                                                            android:layout_height="250dp"
                                                            android:layout_marginTop="100dp"
                                                            android:layout_marginEnd="50dp"
                                                            android:layout_weight="1"
                                                            android:src="@drawable/printstart" />

                                                        <ImageView
                                                            android:id="@+id/printSpeedArea"
                                                            android:layout_width="300dp"
                                                            android:layout_height="400dp"
                                                            android:layout_marginTop="16dp"
                                                            android:layout_marginEnd="50dp"
                                                            android:layout_weight="2"
                                                            android:src="@drawable/printspeedarea" />

                                                        <ImageView
                                                            android:id="@+id/printSigntype"
                                                            android:layout_width="300dp"
                                                            android:layout_height="400dp"
                                                            android:layout_marginTop="16dp"
                                                            android:layout_marginEnd="50dp"
                                                            android:layout_weight="3"
                                                            android:src="@drawable/printsigntype" />

                                                        <ImageView
                                                            android:id="@+id/printStop"
                                                            android:layout_width="200dp"
                                                            android:layout_height="wrap_content"
                                                            android:layout_marginTop="16dp"
                                                            android:layout_marginEnd="100dp"
                                                            android:layout_weight="4"
                                                            android:src="@drawable/printstop" />

                                                        <ImageView
                                                            android:id="@+id/printStartPrinting"
                                                            android:layout_width="200dp"
                                                            android:layout_height="wrap_content"
                                                            android:layout_marginTop="16dp"
                                                            android:layout_marginEnd="100dp"
                                                            android:layout_weight="5"
                                                            android:src="@drawable/printstartprinting" />

                                                </LinearLayout>

                                        </LinearLayout>
                                </ScrollView>

                                <TextView
                                    android:id="@+id/printingTextGuide"
                                    android:layout_width="400dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/PrintingTextGuide"
                                    tools:layout_editor_absoluteY="1342dp" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <!-- ***********        User preferences CardView         *********** -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/userPreferenceInstructions"
                    android:layout_width="900dp"
                    android:layout_height="500dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="32dp"
                    android:visibility="invisible"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/importButtonGuide"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
